--- a/DemoOnDemand/src/main/resources/application.properties
+++ b/DemoOnDemand/src/main/resources/application.properties
@@ -11,10 +11,8 @@ info.app.version=1.1.1
 spring.security.user.name=tanu
 spring.security.user.password=gulia
 
-#Define Custom Properties#
-wife.name=tanu
 
-server.servlet.context-path=/llve
+
 
 spring.datasource.url=jdbc:mysql://localhost:3306/walmart
 spring.datasource.username=root
@@ -24,13 +22,17 @@ spring.datasource.password=aman
 spring.main.banner-mode=off
 
 #Reduce Logging Level
-logging.level.root=warn
+#logging.level.root=warn
 
 
+# server.servlet.context-path=/dailyneeds
+#Define Custom Properties#
+wife.name=tanu
 
 
-
-
+#spring.data.rest.base-path=/magic-api
+spring.data.rest.max-page-size=50
+#by default its 20
 
 
 
